# rspack

./: pnpm-lock.yaml  test-summary-swc-macro.md
crates/node_binding/: rspack.wasi-browser.js  rspack.wasi.cjs
crates/node_binding/src/plugins/js_loader/: resolver.rs
crates/rspack_core/src/utils/: identifier.rs
crates/rspack_loader_lightningcss/src/: lib.rs
crates/rspack_loader_preact_refresh/src/: lib.rs
crates/rspack_loader_react_refresh/src/: lib.rs
crates/rspack_loader_runner/src/: context.rs  loader.rs  runner.rs
crates/rspack_loader_swc/src/: lib.rs
crates/rspack_loader_testing/src/: lib.rs
crates/rspack_plugin_mf/src/sharing/: share_usage_plugin.rs
crates/rspack_plugin_rstest/: Cargo.toml
crates/rspack_plugin_rstest/src/: module_path_name_dependency.rs
examples/basic/: test-swc-macro-sys.js
tests/webpack-test/configCases/container/0-eager-shared/: share-usage.json
tests/webpack-test/configCases/sharing/consume-shared-tree-shaking/: index.js  share-usage.json  webpack.config.js
