[package]
description = "Rstest native plugin"
edition     = "2021"
license     = "MIT"
name        = "rspack_plugin_rstest"
repository  = "https://github.com/web-infra-dev/rspack"
version     = "0.2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
rspack_cacheable = { workspace = true }
rspack_core = { workspace = true }
rspack_error = { workspace = true }
rspack_hook = { workspace = true }
rspack_plugin_javascript = { workspace = true }
swc_core = { workspace = true, features = [
    "__parser",
    "__utils",
    "common_sourcemap",
    "ecma_preset_env",
    "ecma_transforms_optimization",
    "ecma_transforms_module",
    "ecma_transforms_compat",
    "ecma_transforms_typescript",
    "base",
    "ecma_quote",
] }
tracing = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["tracing"]
